opam-version: "2.0"
maintainer: "Richard Mortier <mort@cantab.net>"
authors: [ "Richard Mortier" ]
license: "ISC"

homepage: "https://github.com/mor1/ocal"
dev-repo: "https://github.com/mor1/ocal.git"
bug-reports: "https://github.com/mor1/ocal/issues"
doc: "https://mor1.github.io/ocal/"

available: [ ocaml-version >= "4.02.3" ]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "ocamlfind" {build}
  "dune"      {build}
  "astring"   {build}
  "calendar"  {build}
  "cmdliner"  {build}
  "notty"     {build & >="0.2.0"}
]

synopsis: "ocal — An improved Unix `cal` utility"

description: """
`ocal` is a replacement for the standard Unix `cal` utility.
Partly because I could, partly because I'd become too irritated with its command
line interface.
"""
