;;; SPDX-FileCopyrightText: 2024 Richard Mortier <mort@cantab.net>
;;;
;;; SPDX-License-Identifier: ISC

(executable
  (public_name ocal)
  (package     ocal)
  (name        main)

  (libraries
    astring
    calendar
    cmdliner
    notty
    notty.unix
    )
  (flags (:standard -w "A-44-48-52" -safe-string))
  )
